Fix icon sizing and padding on mobile view for overlay

--- a/resources/sass/components/overlay.scss
+++ b/resources/sass/components/overlay.scss
@@ -129,7 +129,10 @@
             padding: 1.5rem 1rem;
         }
         .github-ico {
-            padding: 1rem;
+            padding: 1.375rem 1rem;
+            a {
+                font-size: 2.5rem;
+            }
         }
     }
 }
@@ -138,6 +141,9 @@
     .overlay-container {
         .menu-popout button {
             right: -58px;
+        }
+        .menuburger {
+            padding: 1.5rem 0.375rem;
         }
     }
   }
